changed name of app/css to app/less. add lesshat mixins

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -95,7 +95,7 @@ textarea {
 
 @import "normalize.less";
 @import "variables.less";
-@import "mixins.less";
+@import "lesshat"; 
 @import "font.less";
 @import "utilities.less";
 
