--- a/app/less/style.less
+++ b/app/less/style.less
@@ -99,6 +99,12 @@ textarea {
 @import "font.less";
 @import "utilities.less";
 
+html, body {
+	text-align: center;
+	height:100%;
+	background:url('images/ps_neutral.png');
+}
+
 
 /* ==========================================================================
    Helper classes
