--- a/debug/app.css
+++ b/debug/app.css
@@ -559,6 +559,12 @@ table {
 .clear {
   clear: both!important;
 }
+html,
+body {
+  text-align: center;
+  height: 100%;
+  background: url('images/ps_neutral.png');
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
