--- a/app/less/style.less
+++ b/app/less/style.less
@@ -95,7 +95,7 @@ textarea {
 
 @import "normalize.less";
 @import "variables.less";
-@import "lesshat"; 
+@import "lesshat/lesshat"; 
 @import "font.less";
 @import "utilities.less";
 
